--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,31 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Add and initialize submodules
+        run: |
+          echo "Current Dir " pwd
+          git submodule add https://github.com/google/googletest.git submodules/googletest
+          git submodule add https://github.com/boostorg/boost.git submodules/boost
+          git submodule update --init --recursive
+
+      - name: Check submodule download
+        run: |
+          # Check googletest
+          if [ ! -d "submodules/googletest" ] || [ -z "$(ls -A submodules/googletest)" ]; then
+            echo "Error: googletest submodule not downloaded correctly."
+            exit 1
+          else
+            echo "googletest submodule downloaded successfully."
+          fi
+
+          # Check boost
+          if [ ! -d "submodules/boost" ] || [ -z "$(ls -A submodules/boost)" ]; then
+            echo "Error: boost submodule not downloaded correctly."
+            exit 1
+          else
+            echo "boost submodule downloaded successfully."
+          fi
+
       - name: Install build dependencies
         run: |
           sudo apt-get update
