--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -52,9 +52,9 @@ jobs:
         run: |
           mkdir -p submodules/googletest/build
           cd submodules/googletest/build
-          cmake ..
+          cmake -DCMAKE_INSTALL_PREFIX=../../../submodules/gtest_installed ..
           make
-          make install --prefix=../../submodules/gtest_installed 
+          make install 
           cd ../../..
 
       - name: Install build dependencies
