--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,6 +16,20 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install build dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y \
+            g++ \
+            cmake \
+            make \
+            vim \
+            wget \
+            git \
+            protobuf-compiler libunwind-dev libprotoc-dev \
+            libgoogle-perftools-dev \
+            libc-ares-dev libcurl4-openssl-dev
+
       - name: Add and initialize submodules
         run: |
           echo "Current Dir " pwd
@@ -45,28 +59,34 @@ jobs:
         run: |
           cd submodules/boost
           ./bootstrap.sh
-          ./b2 install --prefix=../../submodules/boost_installed --with-system --with-filesystem --with-serialization --with-thread 
+          ./b2 install --prefix=../../submodules/boost_installed
           cd ../..    
 
       - name: Build GTest
         run: |
           mkdir -p submodules/googletest/build
           cd submodules/googletest/build
-          cmake -DCMAKE_INSTALL_PREFIX=../../../submodules/gtest_installed ..
+          cmake ..
           make
-          make install 
+          make install --prefix=../../submodules/gtest_installed
           cd ../../..
-
-      - name: Install build dependencies
+      
+      - name: Check Boost Installed
         run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            g++ \
-            cmake \
-            make \
-            vim \
-            wget \
-            git \
-            protobuf-compiler libunwind-dev libprotoc-dev \
-            libgoogle-perftools-dev \
-            libc-ares-dev libcurl4-openssl-dev
+          if [ ! -d "submodules/boost_installed" ] || [ -z "$(ls -A submodules/boost_installed)" ]; then
+            echo "Error: Boost not installed correctly."
+            exit 1
+          else
+            echo "Boost installed successfully."
+          fi    
+          
+      - name: Check GTest Installed
+        run: |
+          if [ ! -d "submodules/gtest_installed" ] || [ -z "$(ls -A submodules/gtest_installed)" ]; then
+            echo "Error: GTest not installed correctly."
+            exit 1
+          else
+            echo "GTest installed successfully."
+          fi          
+
+      
