--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -87,6 +87,16 @@ jobs:
             exit 1
           else
             echo "GTest installed successfully."
-          fi          
+          fi    
+
+      - name: Compile with build.sh
+        run: |
+          cd m1_workspace
+          ./build.sh build
+
+      - name: Run tests with build.sh
+        run: |
+          cd m1_workspace
+          ./build.sh run          
 
       
