add thread safe codes and remove boost

--- a/m1_workspace/CMakeLists.txt
+++ b/m1_workspace/CMakeLists.txt
@@ -1,28 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
-project(BoostExample)
+project(m1_proj)
 
 # Set C++ standard
 set(CMAKE_CXX_STANDARD 14)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
-
-# Adjust Boost paths
-set(BOOST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../submodules/boost_installed/)
-set(BOOST_INCLUDE_DIRS ${BOOST_ROOT}/include)
-set(BOOST_LIBRARY_DIRS ${BOOST_ROOT}/lib)
-
-find_package(Boost REQUIRED COMPONENTS system filesystem)
-
-# Include Boost directories
-include_directories(${Boost_INCLUDE_DIRS})
-
-if(Boost_FOUND)
-    message(STATUS "Found Boost ${Boost_VERSION}")
-    message(STATUS "Boost_INCLUDE_DIRS: ${Boost_INCLUDE_DIRS}")
-    message(STATUS "Boost_LIBRARY_DIRS: ${Boost_LIBRARY_DIRS}")
-    message(STATUS "Boost_LIBRARIES: ${Boost_LIBRARIES}")
-else()
-    message(FATAL_ERROR "Boost not found")
-endif()
 
 # Adjust gtest paths 
 set(GTEST_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/../submodules/gtest_installed)
@@ -42,12 +23,12 @@ find_library(GMOCK_MAIN_LIB gmock_main HINTS ${GTEST_LIBRARY_DIRS})
 
 ########### add executable files here ###########
 
-# Create executable
-add_executable(boost_example src/test_boost.cpp)
-target_include_directories(boost_example PRIVATE ${Boost_INCLUDE_DIRS})
-target_link_libraries(boost_example PRIVATE ${Boost_LIBRARIES})
-
 # Create GTest example executable 
 add_executable(gtest_example src/test_gtest.cpp)
 target_include_directories(gtest_example PRIVATE ${GTEST_INCLUDE_DIRS})
 target_link_libraries(gtest_example PRIVATE ${GTEST_LIB} ${GTEST_MAIN_LIB} ${GMOCK_LIB} ${GMOCK_MAIN_LIB} pthread)
+
+# Create Thread Test executable 
+add_executable(gtest_thread src/MutexLock.h src/ch01_01_thread_safety.cpp)
+target_include_directories(gtest_thread PRIVATE ${GTEST_INCLUDE_DIRS})
+target_link_libraries(gtest_thread PRIVATE ${GTEST_LIB} ${GTEST_MAIN_LIB} ${GMOCK_LIB} ${GMOCK_MAIN_LIB} pthread)
