--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,7 +34,6 @@ jobs:
         run: |
           echo "Current Dir " pwd
           git submodule add https://github.com/google/googletest.git submodules/googletest
-          git submodule add https://github.com/boostorg/boost.git submodules/boost
           git submodule update --init --recursive
 
       - name: Check submodule download
@@ -47,21 +46,6 @@ jobs:
             echo "googletest submodule downloaded successfully."
           fi
 
-          # Check boost
-          if [ ! -d "submodules/boost" ] || [ -z "$(ls -A submodules/boost)" ]; then
-            echo "Error: boost submodule not downloaded correctly."
-            exit 1
-          else
-            echo "boost submodule downloaded successfully."
-          fi
-
-      - name: Build And Install Boost 
-        run: |
-          cd submodules/boost
-          ./bootstrap.sh
-          ./b2 install --prefix=../../submodules/boost_installed
-          cd ../..    
-
       - name: Build And Install GTest 
         run: |
           mkdir -p submodules/googletest/build
@@ -71,16 +55,6 @@ jobs:
           make install 
           cd ../../..
       
-      - name: Check Boost Installed
-        run: |
-          if [ ! -d "submodules/boost_installed" ] || [ -z "$(ls -A submodules/boost_installed)" ]; then
-            echo "Error: Boost not installed correctly."
-            exit 1
-          else
-            ls submodules/boost_installed
-            echo "Boost installed successfully."
-          fi    
-          
       - name: Check GTest Installed
         run: |
           if [ ! -d "submodules/gtest_installed" ] || [ -z "$(ls -A submodules/gtest_installed)" ]; then
@@ -102,5 +76,10 @@ jobs:
           cd m1_workspace
           chmod +x build.sh
           ./build.sh run          
+      - name: Clean tests folder and files 
+        run: |
+          rm -rf  gtest_*
+          chmod +x build.sh 
+          ./build.sh clean          
 
       
