--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,8 @@ jobs:
             libc-ares-dev libcurl4-openssl-dev \
             libgtest-dev \
             libgmock-dev \
-            libboost-all-dev        
+            libboost-all-dev \
+            tree
 
       - name: Find boost library path
         run: |
@@ -40,15 +41,15 @@ jobs:
           echo "BOOST_INCLUDE_PATH=$BOOST_INCLUDE_PATH" >> $GITHUB_ENV
           echo "BOOST_LIB_PATH=$BOOST_LIB_PATH" >> $GITHUB_ENV
 
-          ls $BOOST_INCLUDE_PATH/*
-          ls $BOOST_LIB_PATH/*
+          tree -L 2 $BOOST_INCLUDE_PATH
+          tree -L 2 $BOOST_LIB_PATH
 
       - name: Find gtest library path
         run: |
           GTEST_LIB_PATH=$(find /usr/lib -name libgtest.a)
           echo "GTEST_LIB_PATH=$GTEST_LIB_PATH" >> $GITHUB_ENV
 
-          ls $GTEST_LIB_PATH/*
+          tree -L 2 $GTEST_LIB_PATH
 
       - name: Find gmock library path
         run: |
@@ -57,8 +58,6 @@ jobs:
           echo "GMOCK_LIB_PATH=$GMOCK_LIB_PATH" >> $GITHUB_ENV
           echo "GMOCK_MAIN_LIB_PATH=$GMOCK_MAIN_LIB_PATH" >> $GITHUB_ENV
           
-          ls $GMOCK_LIB_PATH/*
-          ls $GMOCK_MAIN_LIB_PATH/*
+          tree -L 2 $GMOCK_LIB_PATH
+          tree -L 2 $GMOCK_MAIN_LIB_PATH
           
-
-      
